# fpga-stream-compiler

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: board_artix7.yaml  pipeline.yaml
src/fpga_compiler/: cli.py
src/fpga_compiler/intent/: yaml_loader.py
