
[project]
name = "fpga-stream-compiler"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "jinja2>=3.1",
  "rich>=13.0",
  "openai>=1.0.0",
]

[project.scripts]
fpga-compiler = "fpga_compiler.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
